# scan42projects

./: .gitignore  README.md  pyproject.toml
scan_42_projects/: __main__.py  remove_dups.py
