[tool.poetry]
name = "scan-42-projects"
version = "0.1.0"
description = ""
authors = ["jsiller <jsiller@student.42heilbronn.de>"]
readme = "README.md"
packages = [{include = "scan_42_projects"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
pypdf2 = "^3.0.1"
pandas = "^1.5.3"
tenacity = "^8.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
